--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h3>Email</h3>
-    <p>blueribbon2008@gmail.com</p>
+    <p>blue2008@gmail.com</p>
     <h3>Phone Number</h3>
-    <p>+201010502667</p>
+    <p>+201502667</p>
     <table>
       <tr>
     <form class="" action="index.html" method="post">
@@ -18,7 +18,7 @@
       <input type="text" name="" value>
       <br><br>
       <label for="">Password</label>
-      
+
       <input type="submit" name="" value="Submit">
     </form>
       </tr>
