--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h3>Email</h3>
-    <p>blueribbon2008@gmail.com</p>
+    <p>bluon2008@gmail.com</p>
     <h3>Phone Number</h3>
-    <p>+201010502667</p>
+    <p>+201010567</p>
     <table>
       <tr>
     <form class="" action="index.html" method="post">
