--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -14,11 +14,13 @@
     <form class="" action="index.html" method="post">
       <label for="">Your Name:</label>
       <input type="text" name="" value="">
+      <br>
       <label for="">Your Email:</label>
       <input type="text" name="" value>
-      <br><br>
-      <label for="">Password</label>
-      
+      <br>
+      <label for="">Password: </label>
+      <input type="password" name="" id="">
+      <br>
       <input type="submit" name="" value="Submit">
     </form>
       </tr>
