--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -11,15 +11,17 @@
     <p>+201010567</p>
     <table>
       <tr>
+        <hr>
     <form class="" action="index.html" method="post">
       <label for="">Your Name:</label>
       <input type="text" name="" value="">
-      <br>
       <label for="">Your Email:</label>
       <input type="text" name="" value>
-      <br>
       <label for="">Password: </label>
       <input type="password" name="" id="">
+      <br>
+      <label for="">Your Message: </label>
+      <textarea name="" id="" cols="20" rows="5"></textarea>
       <br>
       <input type="submit" name="" value="Submit">
     </form>
