added text area and spaces

--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -12,11 +12,13 @@
     <table>
       <tr>
         <hr>
-    <form class="" action="index.html" method="post">
+    <form class="" action="mailto:info@ss.com" method="post">
       <label for="">Your Name:</label>
       <input type="text" name="" value="">
+      <br>
       <label for="">Your Email:</label>
       <input type="text" name="" value>
+      <br>
       <label for="">Password: </label>
       <input type="password" name="" id="">
       <br>
