--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -12,18 +12,18 @@
     <table>
       <tr>
         <hr>
-    <form class="" action="mailto:info@ss.com" method="post">
+    <form action="mailto:info@ss.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
-      <input type="text" name="" value="">
+      <input type="text" name="yourName" value="">
       <br>
       <label for="">Your Email:</label>
-      <input type="text" name="" value>
+      <input type="text" name="yourEmail" value>
       <br>
       <label for="">Password: </label>
       <input type="password" name="" id="">
       <br>
       <label for="">Your Message: </label>
-      <textarea name="" id="" cols="20" rows="5"></textarea>
+      <textarea name="yourMessage" id="" cols="20" rows="5"></textarea>
       <br>
       <input type="submit" name="" value="Submit">
     </form>
