--- a/yu/myWebsite/index.html
+++ b/yu/myWebsite/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Eso's Personal Site</title>
+    <style>
+      body{
+        background-color: #F2E7D5;
+      }
+    </style>
   </head>
   <body>
     <table>
