css style file add

--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Contact Me</title>
   </head>
+  <style>
+    body{
+      background-color: #6D9886;
+    }
+  </style>
   <body>
     <h3>Email</h3>
     <p>bluon2008@gmail.com</p>
