--- a/yu/myWebsite/hobbies.html
+++ b/yu/myWebsite/hobbies.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>My Hobbies</title>
   </head>
+  <style>
+    body{
+      background-color: #393E46;
+    }
+  </style>
   <body>
     <h3>My Hobbies</h3>
     <ol type="i">
