--- a/yu/myWebsite/index.html
+++ b/yu/myWebsite/index.html
@@ -7,6 +7,14 @@
       body{
         background-color: #F2E7D5;
       }
+      hr
+      {
+        border-style: none;
+        border-top-style: dotted;
+        border-width: 5px;
+        width: 5%;
+        border-color:grey;        
+      }
     </style>
   </head>
   <body>
@@ -22,7 +30,7 @@
       </tr>
       </table>
 
-      <hr size="3" noshade>
+      <hr>
       <h3>Education</h3>
         <ul>
           <li>MCSE</li>
@@ -30,7 +38,7 @@
           <li>Front-End</li>
           <li>Digital Forensics</li>
         </ul>
-        <hr size="3" noshade>
+        <hr>
       <h3>Work Experience</h3>
       <table border="1" cellspacing="10">
         <th>Dates</th>
@@ -51,7 +59,7 @@
 
       </table>
       <br>
-      <hr size="3" noshade>
+      <hr>
       <h3>Skills</h3>
       <table cellspacing="10">
         <tr>
