--- a/yu/myWebsite/index.html
+++ b/yu/myWebsite/index.html
@@ -3,19 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Eso's Personal Site</title>
-    <style>
-      body{
-        background-color: #F2E7D5;
-      }
-      hr
-      {
-        border-style: none;
-        border-top-style: dotted;
-        border-width: 5px;
-        width: 5%;
-        border-color:grey;        
-      }
-    </style>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <table>
