--- a/yu/myWebsite/contact.html
+++ b/yu/myWebsite/contact.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <style>
-    body{
-      background-color: #6D9886;
-    }
-  </style>
   <body>
     <h3>Email</h3>
     <p>bluon2008@gmail.com</p>
