--- a/yu/myWebsite/hobbies.html
+++ b/yu/myWebsite/hobbies.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <style>
-    body{
-      background-color: #393E46;
-    }
-  </style>
   <body>
     <h3>My Hobbies</h3>
     <ol type="i">
