--- a/yu/myWebsite/index.html
+++ b/yu/myWebsite/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Eso's Personal Site</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="css/favicon.ico">
+
   </head>
   <body>
     <table>
